--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,36 @@
-<h1>ORHAN SALIH SAHIN</h1>
+<h1>Orhan Salih ŞAHİN</h1>
 <h3>Hakkımda</h3>
-<p>Merhaba Ben Orhan Salih. Doğma büyüme Niğdeliyim. Masa tenisi ve badminton oymanayı severim. Yazılım öğreniyorum. Teşekkürler</p>
-<h2>Sevdiğim Diziler</h2>
+
+<p>Merhaba, ben Salih. Niğde`de yaşıyorum. komedi dizilerini izlemeyi seviyorum. Web geliştirme ile ilgileniyorum. Kodluyoruz`un bu eğitim serisi sayesinde güzel şeyler öğrendiğimi düşünüyorum.  </p>
+
+<h3>İlgi alanlarım</h3>
+
+<ol>
+    <li>
+        Diziler<ul>
+            <li><a href="https://www.imdb.com/title/tt13675832/" target="_blank">Gibi</a></li>
+            <li>How i met your mother</li>
+        </ul>
+    </li>
+    <li>
+        Kitaplar<ul>
+            <li>Körlük(José Saramago)</li>
+            <li>Kumarbaz</li>
+            <li>Dönüşüm</li>
+        </ul>
+    </li>
+    <li>
+        Filmler<ul>
+            <li><a href="https://www.imdb.com/title/tt1375666/" target="_blank">Inseption</a></li>
+            <li>The prestige</li>
+            <li>Savulun Battal Gazi Geliyor</li>
+        </ul>
+    </li>
+</ol>
+
+<h2>Sevdigim diziler</h2>
 <h3>Gibi</h3>
 
-<p>Başrolünde Feyyaz Yiğit Kıvanç Kılınçın bulunduğu dizinin konusu bu ikilinin sürekli olarak birbiriyle didişmesi. En büyük özellikleri ise sıradan hayatlarını altüst edecek bir şeyler yapmayı her zaman becermek. Küçücük olayları inanılmaz bir ustalıkla büyütüyor, işleri saç baş yolduracak seviyeye getiriyorlar. Onlar her gün yaşadığımız talihsizliklerin, tuhaf olayların ve çaresizliklerin cisimleşmiş hâli.</p>
+<img src="https://i.ytimg.com/vi/VmxyACBZHWY/maxresdefault.jpg" width="500">
+
+<p>Yapımcılığını Feyyaz Yiğit ve Sühan Cebeci 'nin üstlendiği birçok farklı skeçten oluşan bir komedi serisi. exxenin içerisinde dişe dokunur tek yapım olabilir.</p>
